--- a/GAE-WebApp/build.properties
+++ b/GAE-WebApp/build.properties
@@ -1,8 +1,8 @@
 # Directory to appengine tools
-appcfg.dir=/home/mehdi/.m2/repository/com/google/appengine/appengine-java-sdk/1.7.5
+appcfg.dir=/home/mehdi/Documents/Java/appengine-java-sdk/1.7.5
 
 # E-mail address associated with appengine account
 appcfg.email=alaouibelghitimehdi@gmail.com
 
 # Password associated with account
-appcfg.password=MehdiJay
+appcfg.password=MehdiModi
